--- a/mainPage.css
+++ b/mainPage.css
@@ -1,50 +1,46 @@
+/* mainPage.css versión principiante */
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(118, 118, 255); /* fondo violeta */
+body{
+margin:0;
+padding:0;
+font-family: Arial, Helvetica, sans-serif;
+background-color: rgb(118,118,255);
 }
 
-/* Menú / Header */
-.menu {
-    background-color: rgb(225, 225, 225); /* gris claro */
-    padding: 20px 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid rgb(188, 187, 255);
+/* Menú */
+.menu{
+background-color: white;
+padding:30px;
+border-bottom:2px solid rgb(188,187,255);
+display: flex;
+justify-content: space-between;
+align-items: right;    
 }
 
-.menu h2 {
-    margin: 0;
-    font-size: 22px;
-    color: #000;
+/* Título */
+.menu h2{
+margin:0;
+font-size:22px;
+color:black;
 }
 
-/* Menú de navegación */
-.menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+/* Lista del menú */
+.menu ul{
+list-style:none;
+margin:0;
+padding:0;
+display: flex;
 }
 
-.menu ul li {
-    margin-left: 20px;
+.menu ul li{
+margin: 0;
 }
 
-.menu ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 18px;
-    padding: 8px 15px;
-    border-radius: 10px;
-    border: 2px solid rgb(225, 225, 225);
-   
-  
-}
-
-.menu ul li a:hover {
-    background-color: rgb(188, 187, 255);
+.menu ul li a{
+text-decoration:none;
+color:black;
+font-size:18px;
+padding:5px 10px;
+border:1px solid rgb(225,225,225);
+border-radius:5px;
 }
