--- a/login.css
+++ b/login.css
@@ -22,6 +22,9 @@ margin: 120px auto;
 background: #333;
 padding: 50px;
 text-align: center;
+box-shadow: 20px 20px 20px black;
+border-radius: 15px;
+align-content: center;
 }
 
 .textoLogin{
